# kuka_experimental

kuka_experimental/: package.xml
kuka_kr903dp_support/: CMakeLists.txt  package.xml
kuka_kr903dp_support/launch/: load_kr903dp.launch  test_kr903dp.launch
kuka_kr903dp_support/meshes/: Extruder_wHopper_R6.3dm
kuka_kr903dp_support/meshes/collision/: Extruder_wHopper_R6.stl
kuka_kr903dp_support/meshes/visual/: Extruder_wHopper_R6.dae
kuka_kr903dp_support/urdf/: kuka_kr903dp.urdf  kuka_kr903dp.xacro  kuka_kr903dp_macro.xacro
kuka_kr90_r2700_basic/: CMakeLists.txt  _setup_assistant  package.xml
kuka_kr90_r2700_basic/config/: joint_limits.yaml  kuka_kr90r2700pro.srdf
kuka_kr90_r2700_basic/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_kr90_movegroup_test.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_kr90_r2700_basic/src/: kuka_kr90_movegroup_test.cpp
kuka_kr90_support/: _DS_Store  package.xml
kuka_kr90_support/launch/: load_kr90r2700pro.launch  test_kr90r2700pro.launch
kuka_kr90_support/meshes/: _DS_Store
kuka_kr90_support/test/: roslaunch_test.xml
kuka_kr90_support/urdf/: kr90r2700pro.urdf  kr90r2700pro.xacro  kr90r2700pro_macro.xacro
kuka_kr90r2700prouap_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr90r2700prouap_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  kuka_kr90r2700prouap.srdf
kuka_kr90r2700prouap_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  (+7 more)
kuka_kr90uap_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr90uap_support/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/: miaREADME.Md
(+82 files in other folders)
