<?xml version="1.0"?>
<package format="2">
  <name>kuka_kr903dp_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 90 configured to the floor plan at Urban Art Projects (UAP), Northgate, Brisbane (Australia).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files for KUKA KR 90 manipulators, 3D printing extruder head, and room artefacts. This currently includes the R2700 PRO (KR QUANTEC PRO) only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 90 R2700 PRO - UAP Setup</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in the online
      https://www.kuka.com/-/media/kuka-downloads/imported/48ec812b1b2947898ac2598aff70abc0/spez_kr_quantec_pro_en.pdf.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use.
    </p>
  </description>
  <author>Amelia Luu</author>
  <maintainer email="a.luu@qut.edu.au">Amelia Luu</maintainer>
  <license>BSD</license>

  <!-- Objectives: -->
  <!-- <url type="website">http://wiki.ros.org/kuka_kr90_support</url> -->
  <!-- <url type="bugtracker">https://github.com/... </url> -->
  <!-- <url type="repository">https://github.com/... </url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
